--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,35 @@ body {
 .hero_header__mail,
 .hero_header__phone {
     padding-left: 55px;
+    font-size: 20px;
+    font-weight: 500;
+    color: #fff;
+    text-decoration: none;
+}
+
+.hero_header__mail:hover,
+.hero_header__phone:hover {
+  color: #ff8a37;
+}
+
+.hero_header__mail:before {
+content: "";
+display: block;
+background: url(images/icons/feather_mail.svg) no-repeat;
+width: 36px;
+height: 36px;
+float: left;
+margin: -8px 10px 0 0;
+}
+
+.hero_header__phone:before {
+  content: "";
+  display: block;
+  background: url(images/icons/feather_smartphone.svg) no-repeat;
+  width: 36px;
+  height: 36px;
+  float: left;
+  margin: -8px 10px 0 0; 
 }
 
 .hero_content {
@@ -99,13 +128,16 @@ body {
   width: 298px;
   padding: 15px 0;
   cursor: pointer;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 20px;
 }
 
-.hero_content__button a {
-    color: #fff;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 20px;
+.hero_content__button:hover {
+  background-color: transparent;
+  border: 1px solid #ff8a37;
+  color: #ff8a37;
 }
 
 .descr {
@@ -128,12 +160,16 @@ body {
 }
 
 .descr_item {
-  width: 50%;
+  display: flex;
+  width: calc(100% / 2 - 30px);
   padding: 23px;
   border: 1px solid #C4C4C4;
   margin: 30px 15px;
 }
 
 .descr_item__text {
-  float: left;
+  padding: 0 25px;
+  font-size: 20px;
+  font-style: normal;
+  line-height: 1.5;
 }
